--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Protfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkatra&family=Josefin+Sans:ital,wght@1,300&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav>
+            <h2 class="head">Prot<span class="sp">folio</span></h2>
+
+            <ul>
+                <li><a href="protfolio.html">Protfolio</a></li>
+                <li> <a href="blog.html">Blog</a></li>
+                <li><button class="btn1">Hire Me</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div>
+                <h3 class="banner_title">Hi, I am </h3>
+                <h1 class="banner_under">Rakib Hasan</h1>
+                <p>In a nutshell, I create websites that help organizations address business challenges 
+                    and meet their needs. I manage everything from website navigation and layout to a
+                     company’s web hosting and security architecture. My expertise lies within front-end
+                      web apps, and the main languages in my tech stack are JavaScript, React, and of 
+                      course HTML/CSS. </p>
+                      <button class="btn2">Downlod Cv</button>
+                      <button class="btn2">Contact</button>
+            </div>
+            <img class="picture" src="images/13ed55bc-195b-4938-8635-44ccfb2f64a1-removebg-preview.png" alt="">
+        </div>
+        
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
