--- a/index.html
+++ b/index.html
@@ -36,7 +36,36 @@
         </div>
         
     </header>
-    <main></main>
+    <main>
+        <section class="about">
+            <h3 class="section_title">About Me</h3>
+            <p class="section_pera">I am Web Developer. In a nutshell, I create websites that help organizations address business challenges 
+                and meet their needs. I manage everything from website navigation and layout to a
+                 company’s web hosting and security architecture. My expertise lies within front-end
+                  web apps, and the main languages in my tech stack are JavaScript, React, and of 
+                  course HTML/CSS</p>
+                  <div class="continer">
+                    <div class="about-info">
+                        <h3 class="info">Name:</h3>
+                        <p class="info-pera">Rakib Hasan</p>
+                    </div>
+                    <div class="about-info">
+                        <h3 class="info">Email:</h3>
+                        <p class="info-pera">mdhassan.rakib2018@gmail.com</p>
+                    </div>
+                    <div class="about-info">
+                        <h3 class="info">Date of birth:</h3>
+                        <p class="info-pera">15 january 2000
+                        </p>
+                    </div>
+                    <div class="about-info">
+                        <h3 class="info">From:</h3>
+                        <p class="info-pera">Narsingdi Dhaka Bangladesh</p>
+                    </div>
+                  </div>
+
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
