--- a/index.html
+++ b/index.html
@@ -38,16 +38,24 @@
     </header>
     <main>
         <section class="about">
-            <h3 class="section_title">About Me</h3>
+            <div class="full">
+                <div class="img">
+                    <img class="picture2" src="images/IMG_20220317_215819_956.jpg" alt="">
+                  </div>
+            <div class="first">
+            <h3 class="section_title"> <span class="ab">Ab</span>out <span class="me"> Me</span></h3>
             <p class="section_pera">I am Web Developer. In a nutshell, I create websites that help organizations address business challenges 
                 and meet their needs. I manage everything from website navigation and layout to a
                  company’s web hosting and security architecture. My expertise lies within front-end
                   web apps, and the main languages in my tech stack are JavaScript, React, and of 
                   course HTML/CSS</p>
+                </div>
+    
+            </div>
                   <div class="continer">
                     <div class="about-info">
                         <h3 class="info">Name:</h3>
-                        <p class="info-pera">Rakib Hasan</p>
+                    <p class="info-pera">Rakib Hasan</p>
                     </div>
                     <div class="about-info">
                         <h3 class="info">Email:</h3>
